tests/operator/equals_struct.rev
// Bound methods have identity equality.
struct Foo {}
struct Bar {}

print Foo == Foo // expect: true
print Foo == Bar // expect: false
print Bar == Foo // expect: false
print Bar == Bar // expect: true

print Foo == "Foo"  // error: operation '==' is not allowed between types 'Foo' and 'str'